[gd_scene load_steps=7 format=3 uid="uid://cpbmv7o8d7gbj"]

[ext_resource type="Script" uid="uid://bn17ip8bb72n8" path="res://Scripts/you_win.gd" id="1_yq0dy"]
[ext_resource type="FontFile" uid="uid://d4b8ulo7ld6u1" path="res://Assets/Fonts/PixelifySans-Regular.ttf" id="2_t4fbi"]
[ext_resource type="FontFile" uid="uid://bmijv3qthw6as" path="res://Assets/Fonts/Perfect DOS VGA 437 Win.ttf" id="3_na2qd"]

[sub_resource type="Animation" id="Animation_8fo1c"]
resource_name = "Fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ek8ke"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eoghk"]
_data = {
&"Fade_in": SubResource("Animation_8fo1c"),
&"RESET": SubResource("Animation_ek8ke")
}

[node name="YouWin" type="CanvasLayer"]
script = ExtResource("1_yq0dy")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.999935, 0.41322, 0.376307, 0.631373)

[node name="Label" type="Label" parent="."]
offset_left = 238.0
offset_top = 86.0
offset_right = 2653.0
offset_bottom = 693.0
scale = Vector2(0.295, 0.295)
theme_override_fonts/font = ExtResource("2_t4fbi")
theme_override_font_sizes/font_size = 445
text = "You Win!"
horizontal_alignment = 1

[node name="Score" type="RichTextLabel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -378.0
offset_right = 5074.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.1, 0.1)
theme_override_fonts/normal_font = ExtResource("2_t4fbi")
theme_override_font_sizes/normal_font_size = 228
text = "Score
"
horizontal_alignment = 1

[node name="Time" type="RichTextLabel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -253.0
offset_top = -319.0
offset_right = 5077.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.1, 0.1)
theme_override_fonts/normal_font = ExtResource("2_t4fbi")
theme_override_font_sizes/normal_font_size = 228
text = "Time
"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 389.0
offset_top = 398.0
offset_right = 2834.0
offset_bottom = 1030.0
scale = Vector2(0.17, 0.17)
theme_override_constants/separation = 56

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_na2qd")
theme_override_font_sizes/font_size = 280
text = "Menu"

[node name="Save_Score" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_na2qd")
theme_override_font_sizes/font_size = 280
text = "Submit Score"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eoghk")
}

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
z_index = 4
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Save_Score" to="." method="_on_save_score_pressed"]
